Use Integer.valueOf() instead of new Integer()
* new Integer() is deprecated since Java 9